force-app/main/default/objects/os_Request__c/fields/LXT_ID__c.field-meta.xml
<CustomField>
    <fullName>LXT_ID__c</fullName>
    <label>LXT ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>