force-app/main/default/objects/os_Request__c/fields/Message_Content__c.field-meta.xml
<CustomField>
    <fullName>Message_Content__c</fullName>
    <label>Message Content</label>
    <length>255</length>
    <type>Text</type>
</CustomField>