force-app/main/default/objects/os_Request__c/fields/Monthly_Rent_Min_1__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Rent_Min_1__c</fullName>
    <label>Monthly Rent Min</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>