force-app/main/default/objects/os_Request__c/fields/Mortgage_Date__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_Date__c</fullName>
    <label>Mortgage Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>