force-app/main/default/objects/os_Request__c/fields/Mr_C_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Mr_C_Outcome__c</fullName>
    <label>Mr C Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agent Briefing</fullName>
            </value>
            <value>
                <fullName>Cold</fullName>
            </value>
            <value>
                <fullName>Hot</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
            <value>
                <fullName>Offer</fullName>
            </value>
            <value>
                <fullName>Reservation</fullName>
            </value>
            <value>
                <fullName>Warm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>