force-app/main/default/objects/os_Request__c/fields/My_CRM_Property_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>My_CRM_Property_Sub_Type__c</fullName>
    <label>My CRM Property Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Residential</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>