force-app/main/default/objects/os_Request__c/fields/Negotiator_Code_UK__c.field-meta.xml
<CustomField>
    <fullName>Negotiator_Code_UK__c</fullName>
    <label>Negotiator Code UK</label>
    <length>255</length>
    <type>Text</type>
</CustomField>