force-app/main/default/objects/os_Request__c/fields/Neighborhoods__c.field-meta.xml
<CustomField>
    <fullName>Neighborhoods__c</fullName>
    <label>Neighborhoods</label>
    <length>255</length>
    <type>Text</type>
</CustomField>