force-app/main/default/objects/os_Request__c/fields/New_Construction__c.field-meta.xml
<CustomField>
    <fullName>New_Construction__c</fullName>
    <label>New Construction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>