force-app/main/default/objects/os_Request__c/fields/Office_Code_UK__c.field-meta.xml
<CustomField>
    <fullName>Office_Code_UK__c</fullName>
    <label>Office Code UK</label>
    <length>255</length>
    <type>Text</type>
</CustomField>