force-app/main/default/objects/os_Request__c/fields/os_Account__c.field-meta.xml
<CustomField>
    <fullName>os_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Requests (Account)</relationshipLabel>
    <relationshipName>Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>