force-app/main/default/objects/os_Request__c/fields/os_Acre_Max__c.field-meta.xml
<CustomField>
    <fullName>os_Acre_Max__c</fullName>
    <label>Acre Max</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>