force-app/main/default/objects/os_Request__c/fields/os_Activity_Notes__c.field-meta.xml
<CustomField>
    <fullName>os_Activity_Notes__c</fullName>
    <label>Activity Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>