force-app/main/default/objects/os_Request__c/fields/os_Additional_Postal_Codes__c.field-meta.xml
<CustomField>
    <fullName>os_Additional_Postal_Codes__c</fullName>
    <label>Additional Postal Codes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>