force-app/main/default/objects/os_Request__c/fields/os_Adult_Community__c.field-meta.xml
<CustomField>
    <fullName>os_Adult_Community__c</fullName>
    <label>Adult Community</label>
    <length>255</length>
    <type>Text</type>
</CustomField>