force-app/main/default/objects/os_Request__c/fields/os_Approver__c.field-meta.xml
<CustomField>
    <fullName>os_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Requests</relationshipName>
    <type>Lookup</type>
</CustomField>