force-app/main/default/objects/os_Request__c/fields/os_Bank_Owned__c.field-meta.xml
<CustomField>
    <fullName>os_Bank_Owned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bank Owned</label>
    <type>Checkbox</type>
</CustomField>