force-app/main/default/objects/os_Request__c/fields/os_Basement_Type__c.field-meta.xml
<CustomField>
    <fullName>os_Basement_Type__c</fullName>
    <label>Basement Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>