force-app/main/default/objects/os_Request__c/fields/os_Bathroom_US_min__c.field-meta.xml
<CustomField>
    <fullName>os_Bathroom_US_min__c</fullName>
    <label>Bathroom - Min</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>