force-app/main/default/objects/os_Request__c/fields/os_Bathrooms_max__c.field-meta.xml
<CustomField>
    <fullName>os_Bathrooms_max__c</fullName>
    <label>Bathrooms  - max</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>