force-app/main/default/objects/os_Request__c/fields/os_Beachfront__c.field-meta.xml
<CustomField>
    <fullName>os_Beachfront__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Beachfront</label>
    <type>Checkbox</type>
</CustomField>