force-app/main/default/objects/os_Request__c/fields/os_Body_of_Water__c.field-meta.xml
<CustomField>
    <fullName>os_Body_of_Water__c</fullName>
    <label>Body of Water</label>
    <length>255</length>
    <type>Text</type>
</CustomField>