force-app/main/default/objects/os_Request__c/fields/os_Building_and_Developments__c.field-meta.xml
<CustomField>
    <fullName>os_Building_and_Developments__c</fullName>
    <label>Building and Developments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>