force-app/main/default/objects/os_Request__c/fields/os_Client__c.field-meta.xml
<CustomField>
    <fullName>os_Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Requests (Client)</relationshipLabel>
    <relationshipName>Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>