force-app/main/default/objects/os_Request__c/fields/os_Cooling_Type__c.field-meta.xml
<CustomField>
    <fullName>os_Cooling_Type__c</fullName>
    <label>Cooling Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>