force-app/main/default/objects/os_Request__c/fields/os_Country__c.field-meta.xml
<CustomField>
    <fullName>os_Country__c</fullName>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>