force-app/main/default/objects/os_Request__c/fields/os_Days_On_Market_Min__c.field-meta.xml
<CustomField>
    <fullName>os_Days_On_Market_Min__c</fullName>
    <label>Days On Market Min</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>