force-app/main/default/objects/os_Request__c/fields/os_Development_Name__c.field-meta.xml
<CustomField>
    <fullName>os_Development_Name__c</fullName>
    <label>Development Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>