force-app/main/default/objects/os_Request__c/fields/os_Enquiry_Source__c.field-meta.xml
<CustomField>
    <fullName>os_Enquiry_Source__c</fullName>
    <label>Enquiry Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inspection</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>