force-app/main/default/objects/os_Request__c/fields/os_Eppraisal_Valuation__c.field-meta.xml
<CustomField>
    <fullName>os_Eppraisal_Valuation__c</fullName>
    <label>Eppraisal Valuation</label>
    <length>100</length>
    <type>Text</type>
</CustomField>