force-app/main/default/objects/os_Request__c/fields/os_Estimated_Home_Value__c.field-meta.xml
<CustomField>
    <fullName>os_Estimated_Home_Value__c</fullName>
    <label>Estimated Home Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>