force-app/main/default/objects/os_Request__c/fields/os_Fireplace__c.field-meta.xml
<CustomField>
    <fullName>os_Fireplace__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fireplace</label>
    <type>Checkbox</type>
</CustomField>