force-app/main/default/objects/os_Request__c/fields/os_Focus_Area__c.field-meta.xml
<CustomField>
    <fullName>os_Focus_Area__c</fullName>
    <label>Focus Area</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Arabian Ranches</fullName>
            </value>
            <value>
                <fullName>DIFC</fullName>
            </value>
            <value>
                <fullName>Downtown Dubai</fullName>
            </value>
            <value>
                <fullName>Dubai Creek Harbour</fullName>
            </value>
            <value>
                <fullName>Dubai Hills Estate</fullName>
            </value>
            <value>
                <fullName>Emirates Hills</fullName>
            </value>
            <value>
                <fullName>Green Community</fullName>
            </value>
            <value>
                <fullName>Jumeirah Beach Residence</fullName>
            </value>
            <value>
                <fullName>Jumeirah Golf Estates</fullName>
            </value>
            <value>
                <fullName>Jumeirah Islands</fullName>
            </value>
            <value>
                <fullName>Jumeirah Park</fullName>
            </value>
            <value>
                <fullName>MBR City</fullName>
            </value>
            <value>
                <fullName>Palm Jumeirah</fullName>
            </value>
            <value>
                <fullName>Al Barari</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>