force-app/main/default/objects/os_Request__c/fields/os_Furnished__c.field-meta.xml
<CustomField>
    <fullName>os_Furnished__c</fullName>
    <label>Furnished</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Partly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>