force-app/main/default/objects/os_Request__c/fields/os_gsir_Delegated_To__c.field-meta.xml
<CustomField>
    <fullName>os_gsir_Delegated_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delegated To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>