force-app/main/default/objects/os_Request__c/fields/os_HOA_Fees_Max__c.field-meta.xml
<CustomField>
    <fullName>os_HOA_Fees_Max__c</fullName>
    <label>HOA Fees Max</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>