force-app/main/default/objects/os_Request__c/fields/os_Household_Members__c.field-meta.xml
<CustomField>
    <fullName>os_Household_Members__c</fullName>
    <label>Household Members</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>