force-app/main/default/objects/os_Request__c/fields/os_Includes_New_Listings__c.field-meta.xml
<CustomField>
    <fullName>os_Includes_New_Listings__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Includes New Listings</label>
    <type>Checkbox</type>
</CustomField>