force-app/main/default/objects/os_Request__c/fields/os_Includes_Price_Changes__c.field-meta.xml
<CustomField>
    <fullName>os_Includes_Price_Changes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Includes Price Changes</label>
    <type>Checkbox</type>
</CustomField>