force-app/main/default/objects/os_Request__c/fields/os_Keywords__c.field-meta.xml
<CustomField>
    <fullName>os_Keywords__c</fullName>
    <label>Keywords</label>
    <length>255</length>
    <type>Text</type>
</CustomField>