force-app/main/default/objects/os_Request__c/fields/os_KYC_Completed__c.field-meta.xml
<CustomField>
    <fullName>os_KYC_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>KYC Completed</label>
    <type>Checkbox</type>
</CustomField>