force-app/main/default/objects/os_Request__c/fields/os_Lot_Size_max__c.field-meta.xml
<CustomField>
    <fullName>os_Lot_Size_max__c</fullName>
    <label>Lot Size max</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>