force-app/main/default/objects/os_Request__c/fields/os_Monthly_Rent_max__c.field-meta.xml
<CustomField>
    <fullName>os_Monthly_Rent_max__c</fullName>
    <label>Monthly Rent max</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>