force-app/main/default/objects/os_Request__c/fields/os_Property_Address__c.field-meta.xml
<CustomField>
    <fullName>os_Property_Address__c</fullName>
    <label>Property Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>